# one-googol

./: .gitignore  Cargo.toml  README.md
api/: api.go
db/: db.go
server/: .gitignore  db.go  go.mod  main.go  ws.go
server/api/: api.go
server/db/: db.go
server/ws/: ws.go
src/: counter.rs  db.rs  main.rs  util.rs  ws.rs
view/: bun.lockb  package.json  tailwind.config.ts  vite.config.ts
view/src/: app.css  app.html
view/src/lib/: index.ts
view/src/lib/components/: ActionButton.svelte  ClientCounter.svelte  DigitScroller.svelte  ModalUpgrades.svelte
view/src/routes/: +layout.svelte  +page.svelte
view/src/routes/faq/: +page.svelte
