[package]
name = "one-googol-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["ws", "http1"] }
clap = { version = "4.5.26", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
futures = "0.3.31"
num-bigint = "0.4.6"
num-traits = "0.2.19"
