[package]
name = "one-googol"
description = "One Googol collaborative Project"
version = "0.1.0"
authors = ["Nils Wrenger <nils@wrenger.net>"]
edition = "2021"
readme = "README.md"
license = "MIT"
repository = "https://github.com/nwrenger/one-googol"
publish = false

[dependencies]
axum = { version = "0.8.1", features = ["ws"] }
clap = { version = "4.5.26", features = ["derive"] }
tokio = { version = "1.43.0", features = ["sync", "signal", "rt-multi-thread"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs"] }
futures = "0.3.31"
num-bigint = "0.4.6"
num-traits = "0.2.19"
axum-server = { version = "0.7.1", features = ["tls-rustls"] }

# needed later
# serde = { version = "1.0.217", features = ["derive"] }
# serde_json = "1.0.135"
